# photo-merger

./: .gitignore  README.md  main.py  makefile  pyproject.toml
src/photo_merger/: config_manager.py  constants.py  photo_merger.py  utils.py
src/photo_merger/configs/: config.yaml
tests/: conftest.py  test_config_manager.py
